--- a/phase3/Makefile
+++ b/phase3/Makefile
@@ -10,8 +10,8 @@ SHELL       = /bin/sh
 detected_OS := $(shell sh -c 'uname -s 2>/dev/null || echo not')
 BIN_NAME    = prog
 CC          = gcc
-LD          = gcc
-CFLAGS      = -std=gnu99 -Wall -Wextra -Wno-unused-parameter -pedantic -g -O0
+LD          = gcc `pkg-config --libs glib-2.0`
+CFLAGS      = -std=gnu99 -Wall -Wextra -Wno-unused-parameter -pedantic -g -O0 `pkg-config --cflags glib-2.0`
 DEBUG		= 1
 
 
